# Nuwa

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  package.json  requirements.txt
app/web/: .env.example  package-lock.json  package.json
app/web/docs/: ai-model-guide.md  ai-optimization-report.md  backend-api-integration.md  chat-guide.md  db_admin_backend.menu.json
app/web/public/: index.html
app/web/scripts/: cleanup-localstorage.js
app/web/src/: App.jsx  index.js
config/: ai.toml  application.toml  db.toml  logging.toml  pyproject.toml
config/schema/: api_response.json  mcp_tool.json  plugin_config.json  plugin_manifest.json
deployment/kubernetes/: .gitkeep
deployment/nginx/: .gitkeep
docs/: CLASS_DIAGRAMS.md  MODULE_ANALYSIS.md  README.md
plugins/: README.md
plugins/camera-service/: README.md  __init__.py  main.py  pyproject.toml  requirements.txt
plugins/camera-service/core/: __init__.py  constants.py  exceptions.py
plugins/camera-service/core/config/: setting.py
plugins/camera-service/interface/: camera_interface.py
plugins/camera-service/model/: __init__.py  camera.py  node_model.py
plugins/camera-service/node/: __init__.py  mcp_node.py
plugins/camera-service/services/: __init__.py  camera_service.py
plugins/camera-service/tests/: __init__.py
plugins/camera-service/tests/adapter/: camera_interface_test.py
plugins/camera-service/tests/core/model/: camera_test.py
plugins/camera-service/tests/services/: path_service_test.py
plugins/camera-service/tools/: function_schema.json
plugins/camera-service/utils/: __init__.py  camera_param_mapper.py  codec_utils.py  file_path_manager.py  media_writer.py
scripts/: __init__.py
sdk/: __init__.py  base.py  decorators.py  helpers.py  schemas.py  testing.py
sdk/examples/: __init__.py  advanced_service.py  ai_service.py  simple_service.py
sdk/templates/: service_template.py  tool_template.py
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/config/: cors_config.py
src/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
src/api/models/: __init__.py  request_models.py  schemas.py  (+2 more)
src/core/: __init__.py  app.py
templates/advanced-mcp-service/: main.py.template  manifest.json.template
templates/ai-service-template/: main.py.template  manifest.json.template
templates/basic-mcp-service/: README.md.template  config.yml.template  main.py.template  manifest.json.template  requirements.txt.template
templates/prompts/: execution_plan.template  function_matching.template  json_fix.template  plugin_selection.template  result_summary.template
tests/: __init__.py  test_template_system.py
tests/integration/: __init__.py  test_plugin_lifecycle.py
tests/performance/: __init__.py
tests/plugin_tests/: __init__.py
tests/unit/: __init__.py  test_mcp_server.py
(+139 files in other folders)
