# 现代化项目配置文件
# 创建时间: 2025-08-19 09:11:24
# 创建者: Gordon

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


dependencies = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/Gordon/nuwa"
Repository = "https://github.com/Gordon/nuwa.git"

[project.scripts]
app = "src.main:main"

[setuptools.packages.find]
where = ["."]
include = ["src*"]

