[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-plugin"
version = "1.0.0"
description = "Plugin for camera operations and configurations"
authors = [{ name = "Gordon", email = "Gordon@gmail.com" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
keywords = ["camera", "recording", "photo", "video", "plugin", "mcp"]
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=10.0.0",
    "numpy>=1.21.0"
]

[project.urls]
Repository = "https://github.com/Gordon/Nuwa"