[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Camera & Vision"
version = "1.0.0"
description = "Professional camera operations and computer vision capabilities"
authors = [{ name = "Gordon", email = "Gordon@gmail.com" }]
license = { text = "GPL-3.0" }
requires-python = ">=3.8"
keywords = ["camera", "video", "photo", "opencv", "vision"]
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=10.0.0",
    "numpy>=1.21.0"
]

[project.urls]
Repository = "https://github.com/Gordon/Nuwa"